--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: CSICalc
-Title: An Amazing Shiny App
+Title: Cross-Sectional Incidence Estimate and CI Calculator
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Doug",
@@ -8,7 +8,7 @@ Authors@R:
            email = "dmorrison01@ucla.edu")
 Description: Computes incidence rate estimates and confidence intervals from cross-sectional survey data
 URL: https://dmorrison01.github.io/CSICalc, https://github.com/dmorrison01/CSICalc
-License: What license is it under?
+License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.3.1),
